--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>header</header>
-    <section></section>
+    <section><h1>section</h1></section>
     <section></section>
     <section></section>
     <footer></footer>
