--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,7 +13,12 @@
 </head>
 
 <body>
-    <header>header</header>
+    <header>
+        <div class="header__logo">
+        <img src="../img/logo.png">
+        <div class="logo_text">Dog Walker</div>
+    </div>
+    </header>
     <section><h1>section</h1></section>
     <section></section>
     <section></section>
