--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,12 +14,36 @@
 
 <body>
     <header>
-        <div class="header__logo">
-        <img src="../img/logo.png">
-        <div class="logo_text">Dog Walker</div>
-    </div>
+        <div class="row">
+            <div class="col-lg-4 header__logo">
+                <img src="../img/logo.png">
+                <div class="logo_text">Dog Walker</div>
+            </div>
+            <div class="col-lg-5">
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <ul class="nav navbar-nav header__menu">
+                                <li><a href="#">Opcion 1</a></li>
+                                <li><a href="#">Opcion 2</a></li>
+                                <li><a href="#">Opcion 3</a></li>
+                                <li><a href="#">Pagina 2</a></li>
+                                <li><a href="#">Pagina 3</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-lg-3 header__telephone">
+                <img src="../img/phone.png">
+                <div class="logo_text">+7-999-123-45-67</div>
+            </div>
+        </div>
+
     </header>
-    <section><h1>section</h1></section>
+    <section>
+        <h1>section</h1>
+    </section>
     <section></section>
     <section></section>
     <footer></footer>
